Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29194

Removing old QtMCU releases breaks the installation

XMLWordPrintable

    • 68e178c04 (13.0)

      When uninstalling older versions of QtMCUs or 3rdparty components like compilers and SDKs, all entries from ./Tools/sdktool/share/qtcreator/QtProject/QtCreator.ini
      are removed, even if there is still a version available. This makes QtCreator thinks it is missing and silently fails without errors.

      eg.

      • installing QtMCU 2.5.0, and removing 2.4.0 makes QtCreator think to QtMCUs is installed
      • Removing armgcc9, while armgcc10 is still installed, makes QtCreator think the compiler is missing.
      • Removing an old  3rd party board SDK, while still keeping a newer version make QtCreator think it is not installed anymore

        1. image1.png
          31 kB
          Meenal Moundekar
        2. image2.png
          12 kB
          Meenal Moundekar
        For Gerrit Dashboard: QTCREATORBUG-29194
        # Subject Branch Project Status CR V

            sikrovel Sivert Krøvel
            rakeller Rainer Keller
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes